# project_template

./: conda_template_env_py38.yml  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  project_template.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt
docs/_build/html/source/: modules.html  project_template.html
docs/source/: project_template.rst
src/project_template/: functions.py
tests/: test_functions.py  test_project_template.py
