[tool.poetry]
name = "project_template"
version = "0.1.0"
description = ""
authors = ["robkuehl <43447411+robkuehl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flake8-docstrings = "^1.6.0"
numpy = "^1.21.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
Sphinx = "^4.3.1"
tox = "^3.24.4"
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
